# luadata

./: .gitignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  CRATE_README.md  Cargo.toml  GUIDE.md  LICENSE  Makefile  README.md  converter.go  go.mod  luadata  options.go  parser.go  parser_test.go
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  pages.yml  python-wheels.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
clib/: Cargo.toml  main.go
clib/src/: lib.rs
cmd/luadata/: main.go
cmd/wasm/: main.go
docs/: rust-port-evaluation.md
go/: .gitignore  README.md  go.mod  go.sum  luadata.go  luadata_test.go  options.go
go/internal/ffi/: embed_darwin_amd64.go  embed_darwin_arm64.go  embed_dev.go  embed_linux_amd64.go  embed_linux_arm64.go  embed_windows_amd64.go  ffi.go  ffi_unix.go  ffi_windows.go
go/internal/ffi/lib/darwin_amd64/: libluadata.dylib
go/internal/ffi/lib/darwin_arm64/: libluadata.dylib
node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
node-wasm/: README.md  index.js  package.json
node/__test__/: index.spec.mjs
node/npm/darwin-arm64/: package.json
node/npm/darwin-x64/: package.json
node/npm/linux-arm64-gnu/: package.json
node/npm/linux-x64-gnu/: package.json
node/npm/win32-x64-msvc/: package.json
node/src/: lib.rs
npm/: index.d.ts  index.js  package.json
python/: Cargo.toml  README.md  pyproject.toml
python/luadata/: __init__.py  _binding.py
python/src/: lib.rs
python/tests/: test_convert.py
scripts/: prepare-release.sh  release.sh  smoke-test-release.sh  validate-folder.sh
src/: converter.rs  lexer.rs  lib.rs  options.rs  parser.rs  schema.rs  types.rs
testdata/invalid/: bad_syntax.lua  unterminated_string.lua  unterminated_table.lua
testdata/valid/: array.lua  backup.lua.bak  comments.lua  nested.lua  simple.lua
tests/: integration_tests.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: app.js  index.html  luadata.js
