[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "mmobeus-luadata"
dynamic = ["version"]
description = "Convert Lua data files (e.g. WoW SavedVariables) to JSON/Python objects"
requires-python = ">=3.9"
license = "MIT"

[project.optional-dependencies]
test = ["pytest", "maturin>=1.0,<2.0"]

[project.urls]
Homepage = "https://github.com/mmobeus/luadata"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
