[package]
name = "luadata-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parse Lua data files and convert to JSON (WebAssembly module)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
luadata = { path = ".." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
